# authdetect

./: .gitignore  LICENSE  README.md  pyproject.toml
authdetect/: __init__.py  cli.py  engine.py  model.py  parsers.py  report.py  rule_loader.py
rules/auth/: account_enumeration.yml  brute_force.yml  concurrent_failures.yml  credential_stuffing.yml  password_spray.yml  session_fixation.yml  suspicious_user_agent.yml
rules/jwt/: jwt_alg_none.yml  jwt_suspicious_algorithm.yml
rules/oauth/: oauth_state_missing.yml
rules/token/: api_key_brute_force.yml  token_in_url.yml
tests/: test_authdetect.py
