[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "authdetect"
version = "0.1.0"
description = "Stream auth logs through Sigma-compatible detection rules and generate structured alerts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Parshwa Bhavsar" }]
keywords = ["security", "detection", "blue-team", "siem", "sigma", "authentication", "alerts"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
]
dependencies = ["pyyaml>=6.0", "rich>=13.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
authdetect = "authdetect.cli:main"

[tool.setuptools.packages.find]
include = ["authdetect*"]
